double font render on ios fix font weight normal

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,9 @@ h1{
 	font-family: 'Clicker Script', serif;
 	font-size: 4rem;
 	color: rgb(50,50,50);
+	font-weight: normal;
 }
+
 
 p{
 	font-size: 2rem;
